update tradeartic content

--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="above-heading">DESCRIPTION</div>
-            <h2 class="h2-heading">
-              Marketing Automation Will Bring More Qualified Leads
+             <!-- <h2 class="h2-heading"> -->
+              Trading Automation Will Bring More Profit on your Wallet.
             </h2>
           </div>
           <!-- end of col -->
@@ -293,10 +293,9 @@
                 />
               </div>
               <div class="card-body">
-                <h4 class="card-title">Lists Builder</h4>
+                <h4 class="card-title">Wealth Builder</h4>
                 <p>
-                  It's very easy to start creating email lists for your
-                  marketing actions. Just create your Tradeartic account
+                  It's very easy to start your forex trading journey. Just create your Tradeartic account
                 </p>
               </div>
             </div>
@@ -312,9 +311,9 @@
                 />
               </div>
               <div class="card-body">
-                <h4 class="card-title">Campaign Tracker</h4>
+                <h4 class="card-title">Trade Tracker</h4>
                 <p>
-                  Campaigns is a feature we've developed since the beginning
+                  Trade Tracker is a feature we've developed since the beginning
                   because it's at the core of Tradeartic's functionalities
                 </p>
               </div>
@@ -333,7 +332,7 @@
               <div class="card-body">
                 <h4 class="card-title">Analytics Tool</h4>
                 <p>
-                  Tradeartic collects customer data in order to help you analyse
+                  Tradeartic collects trade data in order to help you analyse
                   different situations and take required action
                 </p>
               </div>
@@ -357,8 +356,8 @@
             <div class="above-heading">FEATURES</div>
             <h2 class="h2-heading">Marketing Automation</h2>
             <p class="p-heading">
-              Take your business strategy to the next level and automatize your
-              marketing tasks to save time for product development. Tradeartic
+              Take your trading strategy to the next level and automatize your
+              buy and sell tasks to save time for better profit. Tradeartic
               can provide results in less than 2 weeks
             </p>
           </div>
@@ -378,7 +377,7 @@
                   role="tab"
                   aria-controls="tab-1"
                   aria-selected="true"
-                  ><i class="fas fa-list"></i>List Builder</a
+                  ><i class="fas fa-list"></i>Wealth Builder</a
                 >
               </li>
               <li class="nav-item">
@@ -390,7 +389,7 @@
                   role="tab"
                   aria-controls="tab-2"
                   aria-selected="false"
-                  ><i class="fas fa-envelope-open-text"></i>Campaigns</a
+                  ><i class="fas fa-envelope-open-text"></i>Trade Tracker</a
                 >
               </li>
               <li class="nav-item">
@@ -431,7 +430,7 @@
                   <!-- end of col -->
                   <div class="col-lg-6">
                     <div class="text-container">
-                      <h3>List Building Is Easier Than Ever</h3>
+                      <h3>Trading Is Easier Than Ever</h3>
                       <p>
                         It's very easy to start using Tradeartic. You just need
                         to fill out and submit the
@@ -445,20 +444,19 @@
                         <li class="media">
                           <i class="fas fa-square"></i>
                           <div class="media-body">
-                            Create and embed on websites newsletter sign up
-                            forms
+                            Automate your trading. Buy and Sell.
                           </div>
                         </li>
                         <li class="media">
                           <i class="fas fa-square"></i>
                           <div class="media-body">
-                            Manage forms and landing pages for your services
+                            Real time data.
                           </div>
                         </li>
                         <li class="media">
                           <i class="fas fa-square"></i>
                           <div class="media-body">
-                            Add and remove subscribers using the control panel
+                            24/7 support.
                           </div>
                         </li>
                       </ul>
@@ -498,18 +496,17 @@
                   <!-- end of col -->
                   <div class="col-lg-6">
                     <div class="text-container">
-                      <h3>Campaigns Monitoring Tools</h3>
+                      <h3>Trading Monitoring Tools</h3>
                       <p>
-                        Campaigns monitoring is a feature we've developed since
+                        Trading monitoring is a feature we've developed since
                         the beginning because it's at the core of Tradeartic and
-                        basically to any marketing activity focused on results.
+                        basically to any trading activity focused on results.
                       </p>
                       <ul class="list-unstyled li-space-lg">
                         <li class="media">
                           <i class="fas fa-square"></i>
                           <div class="media-body">
-                            Easily plan campaigns and schedule their starting
-                            date
+                            Track your trades.
                           </div>
                         </li>
                         <li class="media">
@@ -521,7 +518,7 @@
                         <li class="media">
                           <i class="fas fa-square"></i>
                           <div class="media-body">
-                            Evaluate campaign results and optimize future
+                            Evaluate trading results and optimize future
                             actions
                           </div>
                         </li>
@@ -942,33 +939,35 @@
             <!-- Card-->
             <div class="card">
               <div class="card-body">
-                <div class="card-title">BASIC</div>
+                <div class="card-title">Bronze</div>
                 <div class="price">
-                  <span class="currency">$</span><span class="value">Free</span>
+                  <span class="currency">$</span><span class="value">4</span>
                 </div>
-                <div class="frequency">14 days trial</div>
+                <div class="frequency">monthly</div>
                 <div class="divider"></div>
                 <ul class="list-unstyled li-space-lg">
                   <li class="media">
                     <i class="fas fa-check"></i>
-                    <div class="media-body">Email Marketing Module</div>
+                    <div class="media-body">1 Trading Account</div>
                   </li>
                   <li class="media">
                     <i class="fas fa-check"></i>
-                    <div class="media-body">User Control Management</div>
+                    <div class="media-body">1 Currency Pair</div>
+                  </li>
+                <!--
+                  <li class="media">
+                    <i class="fas fa-times"></i>
+                    <div class="media-body">To add</div>
                   </li>
                   <li class="media">
                     <i class="fas fa-times"></i>
-                    <div class="media-body">List Building And Cleaning</div>
+                    <div class="media-body">To add</div>
                   </li>
                   <li class="media">
                     <i class="fas fa-times"></i>
-                    <div class="media-body">Collected Data Reports</div>
+                    <div class="media-body">To Add</div>
                   </li>
-                  <li class="media">
-                    <i class="fas fa-times"></i>
-                    <div class="media-body">Planning And Evaluation</div>
-                  </li>
+                -->
                 </ul>
                 <div class="button-wrapper">
                   <a class="btn-solid-reg page-scroll" href="sign-up.html"
@@ -983,22 +982,23 @@
             <!-- Card-->
             <div class="card">
               <div class="card-body">
-                <div class="card-title">ADVANCED</div>
+                <div class="card-title">SILVER</div>
                 <div class="price">
                   <span class="currency">$</span
-                  ><span class="value">29.99</span>
+                  ><span class="value">8</span>
                 </div>
                 <div class="frequency">monthly</div>
                 <div class="divider"></div>
                 <ul class="list-unstyled li-space-lg">
                   <li class="media">
                     <i class="fas fa-check"></i>
-                    <div class="media-body">Email Marketing Module</div>
+                    <div class="media-body">3 Trading Account</div>
                   </li>
                   <li class="media">
                     <i class="fas fa-check"></i>
-                    <div class="media-body">User Control Management</div>
+                    <div class="media-body">3 Currency Pair</div>
                   </li>
+                  <!--
                   <li class="media">
                     <i class="fas fa-check"></i>
                     <div class="media-body">List Building And Cleaning</div>
@@ -1011,6 +1011,7 @@
                     <i class="fas fa-times"></i>
                     <div class="media-body">Planning And Evaluation</div>
                   </li>
+                  -->
                 </ul>
                 <div class="button-wrapper">
                   <a class="btn-solid-reg page-scroll" href="sign-up.html"
@@ -1028,22 +1029,23 @@
                             <p class="best-value">Best Value</p>
                         </div> -->
               <div class="card-body">
-                <div class="card-title">COMPLETE</div>
+                <div class="card-title">GOLD</div>
                 <div class="price">
                   <span class="currency">$</span
-                  ><span class="value">39.99</span>
+                  ><span class="value">12</span>
                 </div>
                 <div class="frequency">monthly</div>
                 <div class="divider"></div>
                 <ul class="list-unstyled li-space-lg">
                   <li class="media">
                     <i class="fas fa-check"></i>
-                    <div class="media-body">Email Marketing Module</div>
+                    <div class="media-body">7 Trading Account</div>
                   </li>
                   <li class="media">
                     <i class="fas fa-check"></i>
-                    <div class="media-body">User Control Management</div>
+                    <div class="media-body">7 Currency Pair</div>
                   </li>
+                  <!--
                   <li class="media">
                     <i class="fas fa-check"></i>
                     <div class="media-body">List Building And Cleaning</div>
@@ -1056,6 +1058,53 @@
                     <i class="fas fa-check"></i>
                     <div class="media-body">Planning And Evaluation</div>
                   </li>
+                  -->
+                </ul>
+                <div class="button-wrapper">
+                  <a class="btn-solid-reg page-scroll" href="sign-up.html"
+                    >SIGN UP</a
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- end of card -->
+            <!-- end of card -->
+            <!-- Card-->
+            <div class="card">
+              <!--<div class="label">
+                            <p class="best-value">Best Value</p>
+                        </div> -->
+              <div class="card-body">
+                <div class="card-title">PLATINUM</div>
+                <div class="price">
+                  <span class="currency">$</span
+                  ><span class="value">16</span>
+                </div>
+                <div class="frequency">monthly</div>
+                <div class="divider"></div>
+                <ul class="list-unstyled li-space-lg">
+                  <li class="media">
+                    <i class="fas fa-check"></i>
+                    <div class="media-body">12 Trading Account</div>
+                  </li>
+                  <li class="media">
+                    <i class="fas fa-check"></i>
+                    <div class="media-body">UNLIMITTED</div>
+                  </li>
+                  <!--
+                  <li class="media">
+                    <i class="fas fa-check"></i>
+                    <div class="media-body">List Building And Cleaning</div>
+                  </li>
+                  <li class="media">
+                    <i class="fas fa-check"></i>
+                    <div class="media-body">Collected Data Reports</div>
+                  </li>
+                  <li class="media">
+                    <i class="fas fa-check"></i>
+                    <div class="media-body">Planning And Evaluation</div>
+                  </li>
+                  -->
                 </ul>
                 <div class="button-wrapper">
                   <a class="btn-solid-reg page-scroll" href="sign-up.html"
