--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="above-heading">FEATURES</div>
-            <h2 class="h2-heading">Marketing Automation</h2>
+            <h2 class="h2-heading">Trading Automation</h2>
             <p class="p-heading">
               Take your trading strategy to the next level and automatize your
               buy and sell tasks to save time for better profit. Tradeartic
@@ -833,24 +833,23 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="text-container">
-              <h2>Now Is The Time To Upgrade Your Marketing Solution</h2>
+              <h2>Now Is The Time To Upgrade Your Trading Strategy</h2>
               <p>
-                Target the right customers for your business with the help of
-                Tradeartic's patented segmentation technology and deploy
-                efficient marketing campaigns. Keep your customers happy and
-                loyal.
+                Automate your buy and sell for your trading with the help of 
+                Tradeartic's patented segmentation technology and artificial intelligence. 
+                Grow your income. Let the money work for you.
               </p>
               <ul class="list-unstyled li-space-lg">
                 <li class="media">
                   <i class="fas fa-square"></i>
                   <div class="media-body">
-                    Understand customers and meet their requirements
+                    Fund your account let tradeartic do the rest
                   </div>
                 </li>
                 <li class="media">
                   <i class="fas fa-square"></i>
                   <div class="media-body">
-                    Targeted client base with Tradeartic's efficient technology
+                    Trading strategy base with Tradeartic's efficient strategy
                   </div>
                 </li>
               </ul>
@@ -909,9 +908,8 @@
             <!-- end of video preview -->
 
             <div class="p-heading">
-              What better way to show off Tradeartic marketing automation saas
-              app than presenting you some great situations of each module and
-              tool available to users in a video
+              What better way to show off Tradeartic trading automation. Enjoy your trading journey 
+              Sign up - Choos your plan - Earn!
             </div>
           </div>
           <!-- end of col -->
@@ -1146,11 +1144,8 @@
                     <!-- end of image-wrapper -->
                     <div class="text-wrapper">
                       <div class="testimonial-text">
-                        I started to use Tradeartic with the free trial about a
-                        year ago and never stopped since then. It does all the
-                        repeating marketing tasks and allows me to focus on core
-                        development activities like new product research and
-                        design. I love it and recommend it to everyone.
+                        I started to use Tradeartic reccomended by my friend never stopped since then. It does all the
+                        repeating trading tasks and allows me to focus on other stuff. I love it and recommend it to everyone.
                       </div>
                       <div class="testimonial-author">
                         Jude Thorn - Online Marketer
@@ -1174,10 +1169,10 @@
                     <div class="text-wrapper">
                       <div class="testimonial-text">
                         Awesome features for the money. I never thought such a
-                        low ammount of money would bring me so many leads per
+                        low ammount of money would bring me so much profit per
                         month. Before Tradeartic I used the services of an
                         agency which cost 10x more and delivered far less.
-                        Highly recommended to marketers focused on results.
+                        Highly recommended to newbies and experience trader focused on results.
                       </div>
                       <div class="testimonial-author">
                         Roy Smith - Developer
@@ -1200,10 +1195,10 @@
                     <!-- end of image-wrapper -->
                     <div class="text-wrapper">
                       <div class="testimonial-text">
-                        Tradeartic is the best marketing automation app for
-                        small and medium sized business. It understands the
+                        Tradeartic is the best trading automation app for
+                        new and experience trader. It understands the
                         mindset of young entrepreneurs and provides the
-                        necessary data for wise marketing decisions. Just give
+                        necessary data for wise trading decisions. Just give
                         it a try and you will definitely not regret spending
                         your time.
                       </div>
@@ -1228,11 +1223,10 @@
                     <!-- end of image-wrapper -->
                     <div class="text-wrapper">
                       <div class="testimonial-text">
-                        Tradeartic is one of the greatest marketing automation
+                        Tradeartic is one of the greatest trading automation
                         apps out there. I especially love the Reporting Tools
                         module because it gives me such a great amount of
-                        information based on little amounts of input gathered in
-                        just few weeks of light weight usage. Recommended!
+                        information based on my previous trades. Recommended!
                       </div>
                       <div class="testimonial-author">
                         Ronda Louis - Online Marketer
@@ -1272,7 +1266,7 @@
             <div class="text-container">
               <div class="above-heading">NEWSLETTER</div>
               <h2>
-                Stay Updated With The Latest News To Get More Qualified Leads
+                Stay Updated With The Latest News To Get More Profitable Trades
               </h2>
 
               <!-- Newsletter Form -->
